[package]
name = "goo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic", "wayland"] }
bevy_reflect = { version = "0.7.0" }
iyes_loopless = { version = "0.5" }
